--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.4",
+    "@tanstack/react-query": "^5.66.7",
+    "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
@@ -19,12 +21,14 @@
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.5",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.16.1",
     "swiper": "^11.2.2",
     "tailwindcss": "^4.0.4"
   },
